metadata/force-app/main/default/objects/CustomName_tiqGU__c/CustomName_tiqGU__c.object-meta.xml
<CustomObject>
    <description>Description_QZLfk</description>
    <label>CustomLabel_qNiSs</label>
    <nameField>
        <label>CustomLabel_qNiSs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qNiSss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>