metadata/force-app/main/default/objects/CustomName_tiqGU__c/fields/CustomField_adBSA__c.field-meta.xml
<CustomField>
    <fullName>CustomField_adBSA__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqoWwC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>