metadata/force-app/main/default/objects/CustomName_tiqGU__c/fields/CustomField_vlLxh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vlLxh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGvUvh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>